cabal-version: >= 1.10

name: test
version: 0.0.0
build-type: Simple

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  build-depends:
      base
    , hedgehog
    , lifted-base
    , monad-control
    , mtl
    , postgresql-simple
    , resource-pool
    , text
    , tutorial
    , tmp-postgres >= 1.21.0.0
    , transformers
    , transformers-base

  default-language:
      Haskell2010
